add color picker block to blockly eflang

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ eflang/jsgenerator.js
 eflang/jsgenerator.min.js
 eflang/langcommon.min.js
 eflang/language.min.js
+eflang/picker.min.js
 eflang/blockly_uncompressed.js
 eflang/closure-library-read-only/
 eflang/core/
